// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reflections: (header) should compile template with breadcrumbs and without title 1`] = `
"[breadcrumbs]

[toc]

[groups]
"
`;

exports[`Reflections: (template) should compile Enum 1`] = `
"# Enumeration: EnumReflection

[toc]

[groups]
"
`;

exports[`Reflections: (template) should compile a callable reflection 1`] = `
"# Interface: CallableReflection

## Callable

### CallableReflection

[signature]

[toc]
"
`;

exports[`Reflections: (template) should compile an indexable reflection 1`] = `
"# Interface: IndexableReflection

## Indexable

▪ [index: \`number\`]: \`string\`

[toc]
"
`;

exports[`Reflections: (template) should compile implemented class 1`] = `
"# Class: ImplementedClass

## Implements

- [\`ReflectionClass\`](../classes/ReflectionClass.md)

[toc]

[groups]
"
`;

exports[`Reflections: (template) should compile module with breadcrumbs and project title 1`] = `
"# Enumeration: EnumReflection

[toc]

[groups]
"
`;
